[gd_scene load_steps=11 format=3 uid="uid://bec7c2m22x5j1"]

[ext_resource type="Script" path="res://Scripts/Level.gd" id="1_ircux"]
[ext_resource type="PackedScene" uid="uid://bpksafv2ehle8" path="res://Scenes/transition_fade_out.tscn" id="3_62tsb"]
[ext_resource type="Script" path="res://Scripts/ResultsMonsters.gd" id="3_k74a1"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_g0ahp"]
albedo_color = Color(0.607843, 0.278431, 0.615686, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_qvful"]
albedo_color = Color(1, 0.537255, 0.623529, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_yh550"]
albedo_color = Color(0.807843, 1, 0.294118, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_6jvt5"]
albedo_color = Color(0.976471, 1, 0.482353, 1)

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_4n6cv"]
sky_top_color = Color(0.12549, 0.592157, 0.780392, 1)
sky_horizon_color = Color(0.572549, 0.894118, 0.92549, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_jfdmc"]
sky_material = SubResource("ProceduralSkyMaterial_4n6cv")

[sub_resource type="Environment" id="Environment_spkv3"]
background_mode = 2
sky = SubResource("Sky_jfdmc")
tonemap_mode = 2
glow_enabled = true

[node name="Level" type="Node3D"]
script = ExtResource("1_ircux")

[node name="CameraPivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 4.5)

[node name="Camera3D" type="Camera3D" parent="CameraPivot"]
current = true

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="Monsters" type="Node3D" parent="."]

[node name="Scenario" type="Node3D" parent="."]

[node name="CSGBox3D" type="CSGBox3D" parent="Scenario"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.24709, 1, 1)
size = Vector3(6, 3, 1)
material = SubResource("StandardMaterial3D_g0ahp")

[node name="CSGBox3D2" type="CSGBox3D" parent="Scenario"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.75291, 1, 1)
size = Vector3(6, 3, 1)
material = SubResource("StandardMaterial3D_g0ahp")

[node name="CSGBox3D3" type="CSGBox3D" parent="Scenario"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.32719, 2, -5)
size = Vector3(31.1486, 6, 1)
material = SubResource("StandardMaterial3D_qvful")

[node name="CSGBox3D4" type="CSGBox3D" parent="Scenario"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.61258, 3, -8.04255)
size = Vector3(4, 8, 4)
material = SubResource("StandardMaterial3D_qvful")

[node name="Ground" type="CSGBox3D" parent="Scenario"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.6197, -1, 0)
size = Vector3(32.2284, 1, 12)
material = SubResource("StandardMaterial3D_yh550")

[node name="CSGPolygon3D" type="CSGPolygon3D" parent="Scenario"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -7.06617, -0.483355, -0.793028)
polygon = PackedVector2Array(-2, 3, -2, 0, 9.83005, 0.802495, 14.2482, -0.0647323, 14.2893, 3.00203, 2.58016, 2.62231)
material = SubResource("StandardMaterial3D_6jvt5")

[node name="Environment" type="Node3D" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="Environment"]
environment = SubResource("Environment_spkv3")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Environment"]
transform = Transform3D(-0.914687, 0.275112, -0.296077, -0.0557467, 0.639686, 0.766612, 0.400301, 0.717715, -0.569776, 0, 0, -0.0385323)
light_energy = 0.2
light_indirect_energy = 0.5
shadow_enabled = true
directional_shadow_mode = 0

[node name="ResultsMonsters" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 11.5, -0.5, -1)
script = ExtResource("3_k74a1")

[node name="TransitionFadeOut" parent="." instance=ExtResource("3_62tsb")]

[node name="CountResultsTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
autostart = true

[node name="ShowResultsTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
[connection signal="timeout" from="CountResultsTimer" to="." method="_on_count_results_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_onStartTimerTimeout"]
[connection signal="timeout" from="ShowResultsTimer" to="." method="_on_show_results_timer_timeout"]
